Core User Service should roughly be done. Needs testing.
